syntax = "proto3";
option csharp_namespace = "ForumsService";

service GrpcForum{
    rpc GetAllForums (GetAllRequestForum) returns (ForumResponse);
}
message GetAllRequestForum {}

message GrpcForumModel {
    int32 Id = 1;
    string Title = 2;
    string Text = 3;
    int32 UserId  = 4;
    int32 DogId  = 5;
    string Date = 6;
}

message ForumResponse {
    repeated GrpcForumModel forum = 1;
}
